2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c:
	* makeinfo/xml.h: new Docbook elements for quotation: tip, note,
	important, warning, caution.

	* makeinfo/xml.c: better font tags for Docbook.
	(xml_insert_quotation): new function that is aware of specialized
	Docbook elements for quotation.
	(xml_insert_entity): use add_char() instead of insert() for correct
	paragraph handling.

	* makeinfo/insertion.c (begin_insertion, end_insertion): use
	xml_insert_quotation() for quotations.
	(cm_quotation): removed quotation element insertion.
	(cm_insert_copying): also work around xml tags.

	* makeinfo/cmds.c (cm_b): really use bold with Docbook.

	* NEWS: @quotation changes.

2003-11-08  Karl Berry  <karl@gnu.org>

        * doc/texinfo.txi (registeredsymbol): new node.
        
	* doc/Makefile.am (HELP2MAN): invoke explicitly from $(srcdir), in
	case . is not in PATH.

	* configure.ac (AC_CONFIG_HEADERS): apparent AM_CONFIG_HEADERS is
	obsolete now, and we get to use AC_CONFIG_HEADERS again.

	* doc/texinfo.txi (Fonts): mention <lineannotation> feature in
	Docbook feature.

	* doc/texinfo.txi (itemx): warn not to use blank lines between
	@itemx's.

2003-11-08  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_i, cm_b, cm_r): for Docbook, use <lineannotation>
	in @example-like environments.
	(cm_r): For HTML use <span> to make sure we always get roman text.

	* makeinfo/xml.c:
	* makeinfo/xml.h: new docbook element <lineannotation>.  Added also to
	replace_elements to avoid nesting.

2003-11-08  Alper Ersoy  <dirt@gtk.org>

	* doc/texinfo.txi (Custom Headings): removed a newline that broke
	Docbook output.

	* NEWS:
	* makeinfo/cmds.c: new command @registeredsymbol

	* makeinfo/cmds.c (cm_registeredsymbol): new function.
	(cm_code): fixed in_fixed_width_font adjustment for XML and Docbook
	outputs.
	(cm_noindent, cm_indent): set xml_no_indent as well.

	* makeinfo/makeinfo.c (reader_loop): use entities for double quotes